<resources>
    <string name="app_name">FRCScout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_string">\???</string>
    <string name="view_card">view card</string>
    <string name="team_logo">Team Logo</string>
    <string name="versus">VS</string>
    <string name="more_button">More Button</string>
    <string name="autonomous">Autonomous</string>
    <string name="auto">Auto</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="teleop">Teleop</string>
    <string name="cross_baseline">Cross Baseline</string>
    <string name="plus_one">+1</string>
    <string name="minus_one">-1</string>
    <string name="end_game">End Game</string>
    <string name="submit">Submit</string>
    <string name="team_number">Team Number</string>
    <string name="scouter">Scouter Name</string>
    <string name="notes">Notes</string>
    <string name="not_available">N/A</string>
    <string name="choose_event">Choose Event</string>
    <string name="blue_alliance_final_score">Blue Alliance Score</string>
    <string name="red_alliance_final_score">Red Alliance Score</string>
    <string name="exit_habitat">Exit Habitat</string>
    <string name="hatch_panels_secured">Hatch Panels Secured</string>
    <string name="cargo_stored">Cargo Stored</string>
    <string name="rockets_completed">Rockets Completed</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="returned_to_habitat_colon">Returned To Habitat:\u0020</string>
    <string name="returned_to_habitat">Returned To Habitat</string>
    <string name="save">Save</string>
    <string name="number_placeholder">0</string>
    <string name="match_number">Match Number</string>
    <string name="blue_alliance_scout_card_label">Blue Alliance -\u0020</string>
    <string name="red_alliance_scout_card_label">Red Alliance -\u0020</string>
    <string name="upload_data">Upload Data</string>
    <string name="upload_data_desc">This will upload all data to the web server.</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="uploading">Uploading scout card data&#8230;</string>
    <string name="no_internet">Can\'t connect to server. Are you connected to the internet?</string>
    <string name="upload_scout_cards">Upload Scout Cards?</string>
    <string name="upload_scout_cards_warning">This will delete scout cards stored on device.</string>
    <string name="change_event">Change Event</string>
    <string name="select_event">Select Event</string>
    <string name="set_event">Set Event</string>
    <string name="alliance_color">AllianceColor</string>
    <string name="pit_card">Pit Card</string>
    <string name="completed_by">Completed By\u0020</string>
    <string name="colon">:</string>
    <string name="drive_style">Drivetrain</string>
    <string name="hatch_panels_attempts">Hatch Panels Dropped</string>
    <string name="cargo_stored_attempts">Cargo Dropped</string>
    <string name="returned_to_habitat_attempts">Returned To Habitat Failed Attempt:\u0020</string>
    <string name="starting_position">Starting Position</string>
    <string name="starting_level">Starting Level</string>
    <string name="starting_piece">Starting Piece</string>
    <string name="pre_game">Pre Game</string>
    <string name="post_game">Post Game</string>
    <string name="offense_rating">Offense Rating</string>
    <string name="defense_rating">Defense Rating</string>
    <string name="drive_rating">Drive Rating</string>
    <string name="hatches">Hatches</string>
    <string name="cargo">Cargo</string>
    <string name="pickup">Picked Up</string>
    <string name="dropped">Dropped</string>
    <string name="secured">Secured</string>
    <string name="robot_weight">Robot Weight</string>
    <string name="dash">-</string>
    <string name="download_media">Download Robot Media?</string>
    <string name="download_media_desc">Would you like to download all images of the robots?</string>
    <string name="change_event_desc">Changing an event will clear ALL current application data.</string>
    <string name="match">Match</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_scout_card">Add Scout Card</string>
    <string name="add_pit_card">Add Pit Card</string>
    <string name="add_robot_photo">Add Robot Photo</string>
    <string name="robot_length">Robot Length</string>
    <string name="robot_width">Robot Width</string>
    <string name="robot_height">Robot Height</string>
    <string name="mutliply_symbol">X</string>
    <string name="exit_hab">Exit Hab</string>
    <string name="return_hab">Return Hab</string>
    <string name="return_hab_fail">Return Hab Fail</string>
    <string name="min">MIN</string>
    <string name="avg">AVG</string>
    <string name="max">MAX</string>
    <string name="hatches_dropped">Hatch Dropped</string>
    <string name="view_event">view event</string>
    <string name="view_team">view team</string>
    <string name="scout_cards">Scout Cards</string>
    <string name="pit_cards">Pit Cards</string>
    <string name="robot_images">Robot Images</string>
    <string name="quick_stats">Quick Stats</string>
    <string name="add_card">Add Card</string>
    <string name="events">Events</string>
    <string name="enter_web_url">Enter Web URL</string>
    <string name="url_placeholder">http(s)://subdomain.domain.com/</string>
    <string name="connect">Connect</string>
    <string name="server_error">Could not connect to the web server.</string>
    <string name="invalid_url">Invalid Web URL</string>
    <string name="invalid_login">Username or password is incorrect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="teams">Teams</string>
    <string name="checklist">Checklist</string>
    <string name="matches">Matches</string>
    <string name="robot_info">Robot Info</string>
    <string name="logout">Logout</string>
    <string name="download">Download</string>
    <string name="robot_media">Robot Media</string>
    <string name="license_frcscout">
        Copyright &#169; 2019 Alpha Development Solutions

        \n\nFRCScout is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        \n\nFRCScout is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        \n\nYou should have received a copy of the GNU General Public License
        along with FRCScout.  If not, see https://www.gnu.org/licenses/.
    </string>
    <string name="license_picasso">
        Copyright 2013 Square, Inc.

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_circleimageview">
        Copyright 2014 Henning Dodenhof

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_viewpagerdotsindicator">
        Copyright 2016 Tommy Buonomo

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_mpandroidchart">
        Copyright 2019 Philipp Jahoda

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_gson">
        Copyright 2008 Google Inc.

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_twitter">
        Icons made by Pixel Perfect (https://www.flaticon.com/authors/pixel-perfect)from https://www.flaticon.com/
    </string>
    <string name="license_facebook">
        Icons made by Freepik (https://www.flaticon.com/authors/freepik) from https://www.flaticon.com/
    </string>
    <string name="license_instagram">
        Icons made by Freepik (https://www.flaticon.com/authors/freepik) from https://www.flaticon.com/
    </string>
    <string name="license_youtube">
        Icons made by Pixel Perfect (https://www.flaticon.com/authors/pixel-perfect) from https://www.flaticon.com/
    </string>
    <string name="picasso">Picasso</string>
    <string name="circleimageview">CircleImageView</string>
    <string name="viewpagerdotsindicator">ViewPagerDotsIndicator</string>
    <string name="mpandroidchart">MPAndroidChart</string>
    <string name="gson">Gson</string>
    <string name="settings">Settings</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="youtube_icon">Youtube Icon</string>
    <string name="search">Search</string>
</resources>