<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/material_padding">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_frcscout" />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/material_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picasso"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_picasso" />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/material_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circleimageview"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_circleimageview" />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/material_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewpagerdotsindicator"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_viewpagerdotsindicator" />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/material_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mpandroidchart"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_mpandroidchart" />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="@dimen/material_padding" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gson"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_gson" />
    </LinearLayout>
</ScrollView>