<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/material_padding">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_frcscout" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/picasso"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_picasso" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circleimageview"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_circleimageview" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewpagerdotsindicator"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_viewpagerdotsindicator" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mpandroidchart"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_mpandroidchart" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gson"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_gson" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter_icon"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_twitter" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_icon"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_facebook" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram_icon"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_instagram" />

                <include
                    layout="@layout/layout_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_margin="@dimen/material_padding" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/youtube_icon"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_youtube" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>