<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/SearchItem"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/SyncItem"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/sync_data"
        app:showAsAction="always" />

    <item
        android:id="@+id/LogoutItem"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/SettingsItem"
        android:title="@string/settings"
        app:showAsAction="never" />


</menu>